Css/Tab.css
.tabControl {
    width: 100%;
    height: 100%;
    overflow-y: hidden;
}

.tabControl .tabHeaderPanel {
    width: 100%;
    height: 100px;
    border-bottom: 1px solid #B1B2B9;
    box-sizing: border-box;
    display: flex;
    display: -webkit-flex;
    background: #fff;
    left: 0;
    top: 16px;
}

.tabControl .tabHeaderPanel .tabActivity {
    border-bottom: 4px solid #FA9C14;
}

.tabControl .tabHeaderPanel .tabHeader {
    flex: 1;
    -webkit-flex: 1;
    display: inline-block;
    height: 100px;
    line-height: 100px;
    text-align: center;
}

.tabControl .tabHeaderPanel .tabHeader span {
    font-size: 40px;
    color: #5F646E;
}

.tabControl .tabContentPanel {
    position: absolute;
    margin-top: 10px;
    margin-bottom:10px; 
    width: 100%;
    height: 90%;
    box-sizing: border-box;
}

.tabControl .tabContentPanel .tabContent {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    background-color: #fff;
    overflow-y: scroll;
    overflow-x: hidden;
}

